# template-esp32-thing

./: .gitignore  CLAUDE.md  README.md  config_html.h  template-esp32-thing.ino  version.h
.github/workflows/: build.yml  tests.yml
tests/: CMakeLists.txt  Makefile  sketch_api.h  sketch_wrapper.cpp  test_config.cpp  test_gpio.cpp  test_web_handlers.cpp
tests/mocks/: Arduino.h  DNSServer.h  Preferences.h  Update.h  WebServer.h  WiFi.h  mock_support.cpp
